[package]
name = "mlatu"
version = "0.1.0"
authors = ["Ranxi Verba <ranxi.verba@gmail.com>"]
edition = "2018"

[dependencies.abstract-cryptography]
git = "https://github.com/ranxiverba/abstract-cryptography.git"
features = ["std", "secp256k1", "chacha20-poly1305-aead", "byteorder"]

[dependencies.digest]
version = "0.8"

[dependencies.hmac]
version = "0.7"

[dependencies.generic-array]
version = "0.12"

[dependencies.hex]
version = "0.3"

[dependencies.log]
version = "0.4"
