[package]
name = "mlatu"
version = "0.1.0"
authors = ["Ranxi Verba <ranxi.verba@gmail.com>"]
edition = "2018"

[dependencies.abstract-cryptography]
git = "https://github.com/ranxiverba/abstract-cryptography.git"
features = ["std", "secp256k1"]

[dependencies.digest]
version = "0.8"

[dependencies.crypto-mac]
version = "0.7"

[dependencies.keystream]
version = "1.0"

[dependencies.generic-array]
version = "0.12"
features = ["serde"]

[dependencies.either]
version = "1.5"

[dependencies.rand]
version = "0.4"

[dev-dependencies.secp256k1]
version = "0.12"
features = ["rand"]

[dev-dependencies.hmac]
version = "0.7"

[dev-dependencies.sha2]
version = "0.8"

[dev-dependencies.chacha]
version = "0.3"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_derive]
version = "1.0"
optional = true

[dev-dependencies.tirse]
version = "0.5"
features = ["use_std"]

[dependencies.hex]
version = "0.3"

[dependencies.log]
version = "0.4"

[features]
serde-support = ["serde", "serde_derive"]
